--- a/client/css/application.css
+++ b/client/css/application.css
@@ -971,7 +971,22 @@
 }
 
 .vertical-center{
-    vertical-align: middle;
+ text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.video-center{
+	text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:100%;
 }
 
 
