--- a/client/css/jquery.style.1.4.2.css
+++ b/client/css/jquery.style.1.4.2.css
@@ -206,7 +206,7 @@ html .ui-alt-icon .ui-radio-off:after {
 }
 /* Loader */
 .ui-icon-loading {
-	background: url("images/ajax-loader.gif");
+	background:none;
 	background-size: 2.875em 2.875em;
 }
 /* Swatches */
