lentils pot Signed-off-by: paramarco <paramarco@gmail.com>

--- a/client/css/application.css
+++ b/client/css/application.css
@@ -1136,6 +1136,16 @@
 } 
 */
 
+.chat-multimedia-image{
+    width: 100%;
+    width: 37px;
+    height: 37px;
+}
+.searchBtn{
+    width: 100%;
+    max-width: 36px;  
+}
+
 
 .imgOfChat-page-header {
     width: 100%;
