--- a/client/css/application.css
+++ b/client/css/application.css
@@ -938,6 +938,7 @@
 	  max-width : 100%;
 	  max-height : 100%;	
 }
+
 .textarea-chat {  
 
 	background: white;
@@ -945,7 +946,8 @@
 	float: right;
 	resize: none;
 	word-wrap:break-word;
-	max-height : 54px;
+/*	max-height : 54px;*/
+	
 } 
 .ui-height-70percent{
     position: absolute;
@@ -972,13 +974,22 @@
 }
 
 .vertical-center{
- text-align: center;
+    text-align: center;
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.vertical-right{
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+}
+
 
 .video-center{
 	text-align: center;
@@ -990,15 +1001,6 @@
     width:100%;
 }
 
-
-.ui-block-20percent{
-	width: 20%;
-	float: left; 
-}
-.ui-block-80percent{
-	width: 75%;
-	float: right; 
-}
 
 
 #map-page {width: 100%; height: 40%; padding: 0; }
@@ -1031,11 +1033,12 @@
     z-index: 1;
 }
 
-
+.ui-grid-d > .ui-block-span3 {
+  width: 60%;
+}
 
 
 #createGroupButton{ background: #ffffff; } 
-#chat-input-button{ background: #ffffff; } 
 
 #picEditDiv  {
 	margin-left: auto;
@@ -1169,6 +1172,7 @@
   height: 44px;
   width: 44px;
 }
+
 
 .max-nav-button {
 	max-width: 36px;
